--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.9"
 requests = "^2.28.2"
+flask = "^2.2.2"
 
 [build-system]
 requires = ["poetry-core"]
