--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "ugly-youtube"
-version = "1.1.1"
-description = ""
+version = "1.2.0"
+description = "Fetch youtube videos and print it on an ugly interface"
 authors = ["pjpollot <pollot.pierre@gmail.com>"]
 readme = "README.md"
 packages = [{include = "ugly_youtube"}]
